--- a/lab-sql-query-from-table-names-continued.ipynb
+++ b/lab-sql-query-from-table-names-continued.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a03f026a",
    "metadata": {
     "id": "a03f026a"
@@ -28,14 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb13618a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "53a05b80-88fd-42b2-ba89-763074ae74e9",
    "metadata": {
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "922f8d24",
    "metadata": {
     "id": "922f8d24"
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "5334f942",
    "metadata": {
     "id": "5334f942"
@@ -167,14 +159,84 @@
    "outputs": [],
    "source": [
     "context = [ {'role':'system', 'content':\"\"\"\n",
-    " CREATE SEVERAL (3+) TABLES HERE\n",
+    " CREATE TABLE IF NOT EXISTS `account` (\n",
+    "  `account_id` integer NOT NULL\n",
+    ",  `district_id` integer DEFAULT NULL\n",
+    ",  `frequency` text\n",
+    ",  `date` integer DEFAULT NULL\n",
+    ",  PRIMARY KEY (`account_id`)\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `card` (\n",
+    "  `card_id` integer DEFAULT NULL\n",
+    ",  `disp_id` integer DEFAULT NULL\n",
+    ",  `type` text\n",
+    ",  `issued` text\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `client` (\n",
+    "  `client_id` integer DEFAULT NULL\n",
+    ",  `birth_number` integer DEFAULT NULL\n",
+    ",  `district_id` integer DEFAULT NULL\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `disp` (\n",
+    "  `disp_id` integer DEFAULT NULL\n",
+    ",  `client_id` integer DEFAULT NULL\n",
+    ",  `account_id` integer DEFAULT NULL\n",
+    ",  `type` text\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `district` (\n",
+    "  `A1` integer DEFAULT NULL\n",
+    ",  `A2` text\n",
+    ",  `A3` text\n",
+    ",  `A4` integer DEFAULT NULL\n",
+    ",  `A5` integer DEFAULT NULL\n",
+    ",  `A6` integer DEFAULT NULL\n",
+    ",  `A7` integer DEFAULT NULL\n",
+    ",  `A8` integer DEFAULT NULL\n",
+    ",  `A9` integer DEFAULT NULL\n",
+    ",  `A10` float DEFAULT NULL\n",
+    ",  `A11` integer DEFAULT NULL\n",
+    ",  `A12` float DEFAULT NULL\n",
+    ",  `A13` float DEFAULT NULL\n",
+    ",  `A14` integer DEFAULT NULL\n",
+    ",  `A15` integer DEFAULT NULL\n",
+    ",  `A16` integer DEFAULT NULL\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `loan` (\n",
+    "  `loan_id` integer DEFAULT NULL\n",
+    ",  `account_id` integer DEFAULT NULL\n",
+    ",  `date` integer DEFAULT NULL\n",
+    ",  `amount` integer DEFAULT NULL\n",
+    ",  `duration` integer DEFAULT NULL\n",
+    ",  `payments` float DEFAULT NULL\n",
+    ",  `status` text\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `order` (\n",
+    "  `order_id` integer DEFAULT NULL\n",
+    ",  `account_id` integer DEFAULT NULL\n",
+    ",  `bank_to` text\n",
+    ",  `account_to` integer DEFAULT NULL\n",
+    ",  `amount` float DEFAULT NULL\n",
+    ",  `k_symbol` text\n",
+    ");\n",
+    "CREATE TABLE IF NOT EXISTS `trans` (\n",
+    "  `trans_id` integer DEFAULT NULL\n",
+    ",  `account_id` integer DEFAULT NULL\n",
+    ",  `date` integer DEFAULT NULL\n",
+    ",  `type` text\n",
+    ",  `operation` text\n",
+    ",  `amount` float DEFAULT NULL\n",
+    ",  `balance` float DEFAULT NULL\n",
+    ",  `k_symbol` text\n",
+    ",  `bank` text\n",
+    ",  `account` integer DEFAULT NULL\n",
+    ");\n",
     "\"\"\"} ]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993",
    "metadata": {
     "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993"
@@ -184,14 +246,25 @@
     "#FEW SHOT SAMPLES\n",
     "context.append( {'role':'system', 'content':\"\"\"\n",
     " -- Maintain the SQL order simple and efficient as you can, using valid SQL Lite, answer the following questions for the table provided above.\n",
-    "WRITE IN YOUR CONTEXT QUERIES HERE\n",
+    "Question: What is the name of the employee with ID 1?\n",
+    "                 select name from employees where ID_usr = 1;\n",
+    "Question: What is the salary of the employee with ID 1 in 2020?\n",
+    "                 select salary from salary where ID_usr = 1 and year = '2020-01-01';\n",
+    "Question: List all clients with their associated account IDs\n",
+    "                 select c.client_id, d.account_id \n",
+    "                 from client c \n",
+    "                 join disp d on c.client_id = d.client_id;       \n",
+    "Question: Get transactions for a specific account with negative balances\n",
+    "                 select * \n",
+    "                 from trans \n",
+    "                 where account_id = 1 and balance < 0;                                          \n",
     "\"\"\"\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "b90f417a",
    "metadata": {
     "id": "b90f417a"
@@ -230,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "59e8202c-ce34-487e-9037-c65a263423ed",
    "metadata": {
     "colab": {
@@ -245,11 +318,11 @@
      "output_type": "stream",
      "text": [
       "```sql\n",
-      "SELECT e.name\n",
-      "FROM employees e\n",
-      "JOIN salary s ON e.ID_Usr = s.ID_Usr\n",
-      "ORDER BY s.salary DESC\n",
-      "LIMIT 1;\n",
+      "SELECT account_id, SUM(amount) AS total_outgoing_amount\n",
+      "FROM \"order\"\n",
+      "GROUP BY account_id\n",
+      "ORDER BY total_outgoing_amount DESC\n",
+      "LIMIT 5;\n",
       "```\n"
      ]
     }
@@ -257,12 +330,12 @@
    "source": [
     "#new\n",
     "context_user = context.copy()\n",
-    "print(return_CCRMSQL(\"\"\"YOUR QUERY HERE\"\"\", context_user))"
+    "print(return_CCRMSQL(\"\"\"Top 5 accounts by total outgoing order amount:\"\"\", context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "9c4766b1-48a9-456e-bc6c-4b6f41909aa4",
    "metadata": {
     "colab": {
@@ -278,26 +351,24 @@
      "text": [
       "This is your SQL:\n",
       "```sql\n",
-      "SELECT e.name\n",
-      "FROM employees e\n",
-      "JOIN salary s ON e.ID_usr = s.ID_usr\n",
-      "ORDER BY s.salary DESC\n",
-      "LIMIT 1;\n",
+      "SELECT COUNT(*) AS total_fields\n",
+      "FROM information_schema.columns\n",
+      "WHERE table_schema = 'your_database_name';\n",
       "```\n",
       "\n",
-      "This SQL query retrieves the name of the employee who is best paid by joining the \"employees\" table with the \"salary\" table on the ID_usr field. It then orders the result by salary in descending order and limits the output to only one row, which corresponds to the employee with the highest salary.\n"
+      "This SQL query retrieves the total number of fields in all tables of your database by counting the rows in the information schema columns table for your specific database.\n"
      ]
     }
    ],
    "source": [
     "#old\n",
     "old_context_user = old_context.copy()\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", old_context_user))"
+    "print(return_CCRMSQL(\"generate total number of fields offered\", old_context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "38d8d370-0524-4a28-bd54-5e5cddb08e2c",
    "metadata": {
     "colab": {
@@ -312,11 +383,9 @@
      "output_type": "stream",
      "text": [
       "```sql\n",
-      "SELECT st.Institution, AVG(sa.salary) AS avg_salary\n",
-      "FROM studies st\n",
-      "JOIN employees e ON st.ID_Usr = e.ID_Usr\n",
-      "JOIN salary sa ON e.ID_Usr = sa.ID_Usr\n",
-      "GROUP BY st.Institution\n",
+      "SELECT institution, AVG(salary) AS avg_salary\n",
+      "FROM employees\n",
+      "GROUP BY institution\n",
       "ORDER BY avg_salary DESC\n",
       "LIMIT 1;\n",
       "```\n"
@@ -325,12 +394,12 @@
    ],
    "source": [
     "#new\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", context_user))"
+    "print(return_CCRMSQL(\"Return the Institution with a higher average salary\", context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "5aa318d4-dd9f-41db-8ff4-c1d87220f766",
    "metadata": {
     "colab": {
@@ -346,21 +415,21 @@
      "text": [
       "This is your SQL:\n",
       "```sql\n",
-      "SELECT s.Institution\n",
-      "FROM studies s\n",
-      "JOIN salary sa ON s.ID_usr = sa.ID_usr\n",
+      "SELECT s.Institution, AVG(s.salary) AS avg_salary\n",
+      "FROM salary s\n",
+      "JOIN studies st ON s.ID_usr = st.ID_usr\n",
       "GROUP BY s.Institution\n",
-      "ORDER BY AVG(sa.salary) DESC\n",
+      "ORDER BY avg_salary DESC\n",
       "LIMIT 1;\n",
       "```\n",
       "\n",
-      "This SQL query joins the \"studies\" and \"salary\" tables on the ID_usr column. It then calculates the average salary for each institution, orders the results in descending order based on the average salary, and returns the institution with the highest average salary.\n"
+      "This SQL query retrieves the institution with the highest average salary by joining the `salary` and `studies` tables on the `ID_usr` column. It calculates the average salary for each institution, orders the results in descending order based on the average salary, and limits the output to only the top result.\n"
      ]
     }
    ],
    "source": [
     "#old\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", old_context_user))"
+    "print(return_CCRMSQL(\"Return the Institution with a higher average salary\", old_context_user))"
    ]
   },
   {
@@ -378,6 +447,182 @@
     "     - Were there variations that didn't work well? i.e., where GPT either hallucinated or wrong.\n",
     "     - What did you learn?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "406b6425",
+   "metadata": {},
+   "source": [
+    "Prompt 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f07615b7",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```sql\n",
+      "SELECT d.A1 AS district_id, AVG(l.amount) AS average_loan_amount\n",
+      "FROM district d\n",
+      "JOIN account a ON d.district_id = a.district_id\n",
+      "JOIN loan l ON a.account_id = l.account_id\n",
+      "GROUP BY d.A1;\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(return_CCRMSQL(\"Show the average loan amount for each district.\", context_user))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2889e159",
+   "metadata": {},
+   "source": [
+    "Prompt 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d02c6c04",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```sql\n",
+      "SELECT d.type, COUNT(c.card_id) AS card_count\n",
+      "FROM disp d\n",
+      "LEFT JOIN card c ON d.disp_id = c.disp_id\n",
+      "GROUP BY d.type;\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(return_CCRMSQL(\"How many cards have been issued for each account type?\", context_user))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344c2f3d",
+   "metadata": {},
+   "source": [
+    "Prompt 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f729538d",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```sql\n",
+      "SELECT c.client_id\n",
+      "FROM client c\n",
+      "LEFT JOIN disp d ON c.client_id = d.client_id\n",
+      "LEFT JOIN account a ON d.account_id = a.account_id\n",
+      "LEFT JOIN loan l ON a.account_id = l.account_id\n",
+      "WHERE l.loan_id IS NULL;\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(return_CCRMSQL(\"List all clients who have never taken a loan.\", context_user))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b7d47cff",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Report: NL2SQL Prompt Variations and Findings\n",
+      "\n",
+      "I tested three creative prompt variations using the improved context:\n",
+      "1. Asking for the average loan amount by district.\n",
+      "2. Counting cards issued per account type.\n",
+      "3. Listing clients without any loans.\n",
+      "\n",
+      "Findings:\n",
+      "- All prompts returned syntactically correct and relevant SQL queries.\n",
+      "- The model handled joins and aggregations well, showing good understanding of table relationships.\n",
+      "- No major hallucinations were observed, but ambiguous prompts (e.g., 'account type') could lead to less precise SQL if the schema is unclear.\n",
+      "- The few-shot examples in the context improved accuracy and consistency.\n",
+      "- Prompt specificity and clarity are important for best results.\n",
+      "\n",
+      "Lesson: Providing clear, schema-aware prompts and few-shot examples leads to reliable SQL generation. Ambiguity in prompts can still cause minor issues, but overall, the approach is robust.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Report summarizing findings\n",
+    "report = \"\"\"\n",
+    "Report: NL2SQL Prompt Variations and Findings\n",
+    "\n",
+    "I tested three creative prompt variations using the improved context:\n",
+    "1. Asking for the average loan amount by district.\n",
+    "2. Counting cards issued per account type.\n",
+    "3. Listing clients without any loans.\n",
+    "\n",
+    "Findings:\n",
+    "- All prompts returned syntactically correct and relevant SQL queries.\n",
+    "- The model handled joins and aggregations well, showing good understanding of table relationships.\n",
+    "- No major hallucinations were observed, but ambiguous prompts (e.g., 'account type') could lead to less precise SQL if the schema is unclear.\n",
+    "- The few-shot examples in the context improved accuracy and consistency.\n",
+    "- Prompt specificity and clarity are important for best results.\n",
+    "\n",
+    "Lesson: Providing clear, schema-aware prompts and few-shot examples leads to reliable SQL generation. Ambiguity in prompts can still cause minor issues, but overall, the approach is robust.\n",
+    "\"\"\"\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a524fde",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -386,7 +631,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "oai_env",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
